--- a/package.json
+++ b/package.json
@@ -2,22 +2,14 @@
   "name": "facebook",
   "private": true,
   "scripts": {
-    "start": "meteor run",
-    "test": "meteor test --once --driver-package meteortesting:mocha",
-    "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "start": "meteor run"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "jquery": "^3.6.0",
     "meteor-node-stubs": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
-  },
-  "meteor": {
-    "mainModule": {
-      "client": "client/main.jsx",
-      "server": "server/main.js"
-    },
-    "testModule": "tests/main.js"
   }
 }
